# Snap2MIDI

./: .gitignore  README.md  dataset.py  extract.sh  mkdocs.yml  pyproject.toml  requirements.txt
confs/: shallow.json
datasets/: dataset.py  maestro.py
docs/: index.md  installation.md  reference.md
docs/models/: overview.md
docs/source/: conf.py  index.rst
docs/source/api/: evaluator.rst  extract.rst  index.rst  inference.rst  launch_gradio.rst  trainer.rst
extractors/: extract.sh  framed_signal.py  maestro.py  maestro_extract.py
extractors/confs/: maestro_conf.yml
models/: __init__.py  shallow_network.py
notebooks/: piano_roll_to_midi.ipynb
snap2midi/: __init__.py  evaluator.py  extract.py  inference.py  launch_gradio.py  trainer.py
snap2midi/extractor/: __init__.py
snap2midi/extractor/modes/: base_mode.py  hft_mode.py  hpp_mode.py  kong_mode.py  oaf_mode.py  oafv2_mode.py  snap_extract.py  tkun_mode.py
snap2midi/extractor/utils/: __init__.py  conv_jams_midi.py  framed_signal.py  handcrafted_features.py
snap2midi/extractors/: __init__.py  extract.sh  snap_extract.py
snap2midi/extractors/confs/: hft_config.json  snap_conf.json  (+1 more)
snap2midi/gradio_app/: app.py  run.sh
snap2midi/train/: snap_evaluate.py  snap_inference.py  snap_train.py
snap2midi/train_scripts/: losses.py
snap2midi/utils/: __init__.py  eval_mir.py  inference_utils.py  roll_to_midi.py  train_utils.py
train_scripts/: model_loader.py  train_shallow.py
train_scripts/datasets/: dataset.py
train_scripts/evaluate/: eval_mir.py
utils/: framed_signal.py  roll_to_midi.py
(+116 files in other folders)
