[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "snap2midi"
version = "0.1.0"
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]

# Setup overrides due to mypy typing errors
[[tool.mypy.overrides]]
module = "pretty_midi"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jams"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "argbind"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tqdm"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mir_eval"
ignore_missing_imports = true


